--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                             <p class="president-period">2018 - 2022</p>
                             <div class="data-container">
                                 <div class="data-item">
-                                    <span class="data-label">Cambio Colombia:</span>
+                                    <span class="data-label">Δ Colombia:</span>
                                     <span class="data-value" id="duque-colombia">-2.5%</span>
                                 </div>
                                 <div class="data-item">
-                                    <span class="data-label">Cambio OCDE:</span>
+                                    <span class="data-label">Δ OCDE:</span>
                                     <span class="data-value" id="duque-ocde">1.2%</span>
                                 </div>
                             </div>
@@ -59,7 +59,7 @@
                                 <div class="progress-fill duque-fill" id="duque-fill"></div>
                             </div>
                         </div>
-                        <span class="progress-value" id="duque-did">-3.7%</span>
+                        <span class="progress-value" id="duque-did">↓ -3.7%</span>
                     </div>
                 </div>
 
@@ -72,11 +72,11 @@
                             <p class="president-period">2022 - 2025</p>
                             <div class="data-container">
                                 <div class="data-item">
-                                    <span class="data-label">Cambio Colombia:</span>
+                                    <span class="data-label">Δ Colombia:</span>
                                     <span class="data-value" id="petro-colombia">3.2%</span>
                                 </div>
                                 <div class="data-item">
-                                    <span class="data-label">Cambio OCDE:</span>
+                                    <span class="data-label">Δ OCDE:</span>
                                     <span class="data-value" id="petro-ocde">1.1%</span>
                                 </div>
                             </div>
@@ -89,7 +89,7 @@
                                 <div class="progress-fill petro-fill" id="petro-fill"></div>
                             </div>
                         </div>
-                        <span class="progress-value" id="petro-did">+2.1%</span>
+                        <span class="progress-value" id="petro-did">↑ +2.1%</span>
                     </div>
                 </div>
             </div>
