--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                             <div class="data-container">
                                 <div class="data-item">
                                     <span class="data-label">Δ Colombia:</span>
-                                    <span class="data-value" id="duque-colombia">-2.5%</span>
+                                    <span class="data-value" id="duque-colombia">+7.9%</span>
                                 </div>
                                 <div class="data-item">
                                     <span class="data-label">Δ OCDE:</span>
-                                    <span class="data-value" id="duque-ocde">1.2%</span>
+                                    <span class="data-value" id="duque-ocde">+5.1%</span>
                                 </div>
                             </div>
                         </div>
@@ -59,7 +59,7 @@
                                 <div class="progress-fill duque-fill" id="duque-fill"></div>
                             </div>
                         </div>
-                        <span class="progress-value" id="duque-did">↓ -3.7%</span>
+                        <span class="progress-value" id="duque-did">↑ +2.8%</span>
                     </div>
                 </div>
 
@@ -73,11 +73,11 @@
                             <div class="data-container">
                                 <div class="data-item">
                                     <span class="data-label">Δ Colombia:</span>
-                                    <span class="data-value" id="petro-colombia">3.2%</span>
+                                    <span class="data-value" id="petro-colombia">+0.2%</span>
                                 </div>
                                 <div class="data-item">
                                     <span class="data-label">Δ OCDE:</span>
-                                    <span class="data-value" id="petro-ocde">1.1%</span>
+                                    <span class="data-value" id="petro-ocde">+2.3%</span>
                                 </div>
                             </div>
                         </div>
@@ -89,7 +89,7 @@
                                 <div class="progress-fill petro-fill" id="petro-fill"></div>
                             </div>
                         </div>
-                        <span class="progress-value" id="petro-did">↑ +2.1%</span>
+                        <span class="progress-value" id="petro-did">↓ -2.1%</span>
                     </div>
                 </div>
             </div>
