--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <button class="indicator-btn" data-indicator="deficit">Déficit Fiscal</button>
                 <button class="indicator-btn" data-indicator="gini">GINI</button>
                 <button class="indicator-btn" data-indicator="pobreza">Pobreza</button>
-                <button class="indicator-btn" data-indicator="seguridad">Seguridad</button>
-                <button class="indicator-btn" data-indicator="mortalidad">Mortalidad Infantil</button>
+                <button class="indicator-btn" data-indicator="seguridad">Inseguridad (Homicidios/100k hab.)</button>
+                <button class="indicator-btn" data-indicator="mortalidad">Mortalidad Infantil (por 1000 nacidos)</button>
             </div>
         </section>
 
